--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="commentsSection">
+        <ul id="commentsList">
+
+        </ul>
+
+    </section>
 
     <script src="src/services.js"></script>
 </body>
