--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <section id="commentsSection">
+        <h1>Share your review</h1>
+        <form action="" id="addNewComment">
+            <button onclick ="createNewComment()">New comment</button>
+            <input type="text" placeholder="Alias" name ="name" required>
+            <input type="text" placeholder="Your purchase" name ="product" required>
+            <input type="text" placeholder="Tell us more" name ="description" required>
+
+    </form>
         <ul id="commentsList">
 
         </ul>
